# search_engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  answers.json  config.json  converter.cpp  inverted_index.cpp  main.cpp  requests.json
GTests/: CMakeLists.txt  inverted_index_test.cpp  search_server_test.cpp
include/: converter.h  inverted_index.h  search_server.h
src/: CMakeLists.txt  converter.cpp  inverted_index.cpp  search_server.cpp
